Buttons weren't centered on mobile. Removed margin-left and that seemed to fix it.

--- a/src/components/timer-styles.css
+++ b/src/components/timer-styles.css
@@ -77,6 +77,7 @@ p {
     }
     button {
         margin-top: 20px;
+        margin-left: 0;
     }
     .instructions {
         margin-top: 20px;
